# memechess

./: .gitignore  .pdm.toml  README.md  Rage_Ub.toml  build.cmd  cli.py  cmemechess  config.nims  evilfish  evilfish.nimble  inj.user.js  main.py  memechess.nimble  pyproject.toml
.github/workflows/: main.yml
evilfish/: __init__.py  config.py  inj.user.js  log.py  state.py  utils.py
evilfish/core/: consts.py  controller.py  engine.py  protection.py  types.py  utils.py
evilfish/core/engine/: __init__.py
evilfish/core/protection/: __init__.py
evilfish/files/: vm.user.js
evilfish/game/: logic.py  schemas.py  types.py
evilfish/handlers/game/: __init__.py  controller.py  models.py
evilfish/proto/: __init__.py  http.py
evilfish/strategies/: __init__.py  schemas.py  strategy.py
nimcache/tests/megatest_4a8a08f09d37b73795649038408b5f33/: @mmegatest.nim.c  megatest.json  stdlib_digitsutils.nim.c  stdlib_dollars.nim.c  stdlib_system.nim.c
src/: config.nims  customsocket.nim  evilfish.nim  evilfish.nims  http.nim  injector.nim  memechess.nim  shellcode.js
src/chess/: commands.nim  engine.nim  server.nim  uci.nim
src/client/: api.nim  commands.nim  loader.nim  loader.nims  shellcode.nim  ui.nim  utils.nim
src/client/api/: hook.nim  jquery.nim  misc.nim  object.nim  reflect.nim  terminal.nim
src/server/: fish.nim
src/server/chess/: config.nim  (+3 more)
src/shared/: frames.nim  handler.nim  proto.nim
tests/: .gitignore  commands.nim  config.nims  frames.nim  megatest  test_commands.nim  test_config.nim  test_engine  test_engine.nim  test_frames.nim  test_uci.nim
(+11 files in other folders)
